<resources>
    <string name="app_name">Aqozone Dryer</string>
    <string name="get_started">Get started</string>
    <string name="logo">LOGO</string>
    <string name="server_connection">server connection</string>
    <string name="info_sending_ping_to_server_on_alive">[INFO] Sending ping to server on /alive\n\n[RESPONSE] Received data from server\n\n[INFO] Sending ping to server on /alive\n\n[RESPONSE] Received hey hi my name is abhijeet priya i love someone data from server\n[INFO] Sending ping to server on /alive\n\n[RESPONSE] Received data from server</string>
    <string name="stop_and_close">STOP AND CLOSE</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="your_password_that_will_instantly_log_you_in">Your password that will instantly log you in</string>
    <string name="get_a_new_device_now">Get your new device now !</string>
    <string name="ping_payload">Ping server</string>
    <string name="change_device">Change Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_discriptior">Image discriptior</string>
    <string name="edit">Edit and Send</string>
    <string name="aaa">The Grilled Chicken Salad features tender chicken on mixed greens with cherry tomatoes, cucumber, and avocado. Tossed in a tangy vinaigrette, it\'s a delicious, nutritious choice for a.</string>
    <string name="created_at_2023_04_07">Created At: 2023-04-07</string>
    <string name="updated_at_2023_04_07">Updated At: 2023-04-07</string>
    <string name="search_for_recipes_here">Search for recipes by name, author, temp, humid ...</string>
    <string name="status">Status</string>
    <string name="recipe_time_elapsed">Subscription Timer</string>
    <string name="todo">TODO</string>
    <string name="temporary_recipe">Temporary Recipe</string>
    <string name="no_temp_recipe_foun">No Temp recipe found click here to add a new recipie for the device.</string>
    <string name="welcome_back_hrishikesh">Welcome Back, Hrishikesh</string>
    <string name="global_view">Global View</string>
    <string name="your_devices">Your Devices</string>
    <string name="private_recipes">Private Recipes</string>
    <string name="jobsheet_history">Jobsheet history</string>
    <string name="active_inactive_devices">Active/inactive Devices</string>
    <string name="subscription_starts">Subscription starts:</string>
    <string name="subscription_ends">Subscription ends:</string>
    <string name="dash">--</string>
    <string name="shows_current_status_and_info_of_the_selected_device_please_update_this_description_section_later_before_deploying_this_project">Shows current status and info of the selected device, please update this description section later before deploying this project.</string>
    <string name="w">W</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="ticket_details">Ticket ID: #%1$s\nTicket type: %2$s\nDescription: %3$s\nRemarks: %4$s\nOur team may contact you on %5$s\nStatus: %6$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">General</string>
    <string name="sync_header">Storage Configs</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Logs font size</string>
    <string name="reply_title">Network optimization</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Clear device configuration</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_with_scanner">Login with Scanner</string>
    <string name="settings">Settings</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="scan_qr">Scan QR</string>
    <string name="voice_search">Voice search</string>
    <string name="jobsheets">Jobsheets</string>
    <string name="your_address">Your Address</string>
    <string name="support_center">Support Center</string>
    <string name="manager">Manager</string>
    <string name="update_data">Update Data</string>

    <string-array name="font_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="font_size_values">
        <item>12sp</item>
        <item>14sp</item>
        <item>16sp</item>
    </string-array>
</resources>