<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boot.ActivityIntro">


    <ImageView
        android:id="@+id/checkServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/server_connection"
        android:background="@drawable/circle"
        android:padding="8dp"
        android:elevation="5dp"
        android:src="@drawable/outline_dns_24"
        app:tint="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:elevation="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/calibrib"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/calibri"
            android:text="Spekter is a committee-based organization started with the goal to enhance the learning culture in college. Responsible for keeping track of all the technical events of the college"
            android:textAlignment="center"
            android:textColor="#92959A"
            android:textSize="17sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStarted"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/btn_solid_round"
            android:textAllCaps="false"
            android:layout_marginBottom="5dp"
            android:text="@string/get_started"
            android:textSize="17sp"
            android:elevation="5dp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>



</RelativeLayout>