<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f8"
    tools:context=".users.UsersHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:background="#fff"
        android:id="@+id/top"
        android:elevation="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:elevation="7dp"
            android:id="@+id/dropdown_menu"
            android:src="@drawable/ic_baseline_more_vert_24"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:elevation="7dp"
            android:id="@+id/scanner"
            android:layout_toStartOf="@id/dropdown_menu"
            android:src="@drawable/baseline_qr_code_scanner_24"/>



        <RelativeLayout
            android:id="@+id/top_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher_round"
                android:id="@+id/src_i"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                app:tint="#673AB7"
                android:contentDescription="@string/logo" />

            <LinearLayout
                android:id="@+id/profile_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/src_i"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selected_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto"
                    android:maxLines="1"
                    android:text="@string/dash"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/device_uuid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:fontFamily="@font/roboto"
                    android:ellipsize="end"
                    android:layout_marginTop="2dp"
                    android:textColor="#6B6B6B"
                    android:text="Your curtrent selected device is --"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_below="@id/top_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="9dp"
            android:weightSum="2">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/set_device"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:elevation="7dp"
                android:background="@drawable/rect_round_no_bg"
                android:focusable="true"
                android:foreground="@drawable/ripple"
                android:backgroundTint="#E91E63"
                android:text="@string/change_device"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/calibrib"
                android:textColor="#F6F6F6"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cPaye"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:elevation="7dp"
                android:background="@drawable/rect_round_no_bg"
                android:backgroundTint="#3F51B5"
                android:focusable="true"
                android:foreground="@drawable/ripple"
                android:text="@string/ping_payload"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:fontFamily="@font/calibrib"
                android:textColor="#F6F6F6"/>


        </LinearLayout>

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:elevation="5dp"
            app:tabGravity="center"
            app:tabIndicatorColor="#006EED"
            app:tabMode="auto"
            app:tabSelectedTextColor="#006EED"
            app:tabTextAppearance="@style/MineCustomTabText" />

    </androidx.viewpager.widget.ViewPager>


</LinearLayout>