<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boot.ui.MasterLogin">


    <ImageView
        android:id="@+id/imgPlaylistItemBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:maxHeight="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/warp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/checkServerL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/server_connection"
                android:background="@drawable/circle"
                android:padding="8dp"
                android:elevation="5dp"
                android:src="@drawable/outline_dns_24"
                app:tint="#ffffff" />



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:contentDescription="@string/logo" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/edittext_curved"
                android:elevation="7dp"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:hint="@string/email_address"
                    android:drawableStart="@drawable/ic_outline_alternate_email_24"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableTint="#303030"
                    android:textColor="#303030"
                    android:textColorHint="#b7b7b7"
                    android:autofillHints="Login id" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/edittext_curved"
                android:elevation="7dp"
                android:minHeight="52dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableTint="#303030"
                    android:textColor="#303030"
                    android:textColorHint="#b7b7b7" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/your_password_that_will_instantly_log_you_in"
                android:textAlignment="viewStart"
                android:textColor="#E3E3E3"
                app:drawableTint="#FFEB3B"
                tools:ignore="RtlCompat"
                app:drawableStartCompat="@drawable/ic_outline_info_24" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_curved_round"
                android:minHeight="52dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#dddddd"
                android:textSize="16sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/emaillogin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="22dp"
                    android:fontFamily="@font/calibrib"
                    android:text="OR"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/emaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/otherholder"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/edittext_curved"
                android:elevation="7dp"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="-30dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:text="@string/login_with_scanner"
                    android:textColor="#252525"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/outline_developer_board_24"
                    app:drawableTint="#252525" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/otherholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/tos"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:minHeight="52dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_curved"
                    android:drawableStart="@drawable/ic_outline_info_24"
                    android:drawablePadding="10dp"
                    android:elevation="7dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:minHeight="52dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:text="Support"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="#252525"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_curved"
                    android:drawablePadding="10dp"
                    android:elevation="7dp"
                    android:drawableStart="@drawable/outline_sentiment_very_dissatisfied_24"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:minHeight="52dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:text="Forgot password?"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="#252525"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />


            </LinearLayout>

            <TextView
                android:id="@+id/tos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/calibri"
                android:text="By continuning you are agreeing to our \nTerms of service, privacy policy, Content Policy."
                android:textAlignment="center"
                android:textColor="#E3E3E3"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>